--- a/src/jade/header/_nav.jade
+++ b/src/jade/header/_nav.jade
@@ -2,9 +2,10 @@ nav.page-header-nav
   +header-nav-links(
     'page-header-nav__list',
     'page-header-nav__list-item',
+    'page-header-nav-about',
     'page-header-nav__link')
 
-nav.page-header-nav-mobile
+nav.page-header-nav-mobile#page-header-nav-mobile
   +header-nav-links(
     'page-header-nav-mobile__list', 
     'page-header-nav-mobile__list-item',
