--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -51,7 +51,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -46%);
   width: 86%;
   min-width: 310px;
   max-width: 390px;
@@ -60,4 +60,5 @@
   z-index: 60;
   opacity: 0;
   pointer-events: none;
+  transition: all 0.3s ease-in-out;
 }
