--- a/src/scss/modules/header/_page-header-nav-mobile.scss
+++ b/src/scss/modules/header/_page-header-nav-mobile.scss
@@ -7,14 +7,12 @@
   opacity: 0;
   z-index: 10;
   pointer-events: none;
-  // APPLY THESE ON SHOW WITH MODIFIER CLASS NAME
-  // AND GIVE BODY A NO-SCROLL CLASS. EX:
-  //  .noScroll { 
-  //    overflow: hidden;
-  //  }
-  // 
-  // opacity: 0.95;
-  // pointer-events: auto;
+  transition: opacity 0.2s ease;
+  
+  &.show {
+    opacity: 0.95;
+    pointer-events: auto;
+  }
 
   &__list {
     display: grid;
