--- a/src/scss/modules/home-about-modal/home-about-modal.scss
+++ b/src/scss/modules/home-about-modal/home-about-modal.scss
@@ -1,9 +1,12 @@
 .home-about-modal {
   @include modal(#fff);
   border-radius: 8px;
-  // ON SHOW
-  // pointer-events: auto;
-  // opacity: 1;
+  
+  &.show {
+    pointer-events: auto;
+    opacity: 1;
+    transform: translate(-50%, -50%)
+  }
 
   &__close {
     position: absolute;
@@ -25,6 +28,7 @@
     display: flex;
     max-width: 39.3em;
     width: 730px;
+    height: 30.6em;
 
     &__image {
       display: block;
@@ -40,7 +44,7 @@
 
   @include desktop {
     width: 41.5em;
-    height: 29.35em;
+    height: 29.5em;
     max-width: none;
     &:hover {
       .home-about-modal__close {
