--- a/src/scss/modules/overlay/page-overlay.scss
+++ b/src/scss/modules/overlay/page-overlay.scss
@@ -7,8 +7,10 @@
   z-index: 50;
   pointer-events: none;
   opacity: 0;
+  transition: opacity 0.2s ease-in-out;
   
-  // ON SHOW
-  // pointer-events: auto;
-  // opacity: 0.5;
+  &.show {
+    pointer-events: auto;
+    opacity: 0.5;
+  }
 }
