--- a/src/jade/modules/_about-modal.jade
+++ b/src/jade/modules/_about-modal.jade
@@ -5,8 +5,8 @@
   .home-about-modal-desc
     h1.home-about-modal-desc__heading About Me
     p.home-about-modal-desc__paragraph I harbor an obsession of all things web dev—anything from designing mockups in Sketch to learning and applying concepts of functional programming. I have a propensity to follow best practices and a drive to learn everything, though I recognize the importance of filtering out all the noise of tools and frameworks to get at the rudimentary building blocks of the web.
-    p.home-about-modal-desc__paragraph For me, web development is an outlet for both the creative  and the logical person in me. I also find it a fascinating and exciting industry to be in. I don’t see development as work, but rather a craft to be fine-tuned over time.
-    p.home-about-modal-desc__paragraph Other than coding, some hobbies of mine include running, hiking, reading, and boardgames. Though I hail from the small city of Rochester, NY, I have an explorer’s ambition—a desire to visit new places, big and small.
+    p.home-about-modal-desc__paragraph For me, web development is an outlet for both the creative  and the logical person in me. I find it a fascinating and exciting industry to be in. To me, development isn't work; it's a craft that can be fine-tuned over time.
+    p.home-about-modal-desc__paragraph Other than coding, some hobbies of mine include running, hiking, reading, and boardgames. Though I hail from the small city of Rochester, NY, I have an explorer’s ambition for visiting new places, big and small.
 
     .home-about-modal-icons
       a(class="home-about-modal-icons__icon", href="#")
