About modal - close About modal when clicking the X or outside it - open About modal from mobile nav

--- a/src/jade/header/_nav.jade
+++ b/src/jade/header/_nav.jade
@@ -2,11 +2,10 @@ nav.page-header-nav
   +header-nav-links(
     'page-header-nav__list',
     'page-header-nav__list-item',
-    'page-header-nav-about',
-    'page-header-nav__link')
+    'page-header-nav-about')
 
 nav.page-header-nav-mobile#page-header-nav-mobile
   +header-nav-links(
     'page-header-nav-mobile__list', 
     'page-header-nav-mobile__list-item',
-    'page-header-nav-mobile__link')
+    'page-header-nav-mobile-about')
