--- a/src/jade/modules/_about-modal.jade
+++ b/src/jade/modules/_about-modal.jade
@@ -1,5 +1,5 @@
-.home-about-modal#home-about-modal
-  .home-about-modal__close
+.home-about-modal#about-modal
+  .home-about-modal__close#about-modal-close
     include ../../svg/misc-icons/close_icn.svg
 
   .home-about-modal-desc
