Build Contact modal, set modal handlers, fix position bug for mobile nav

--- a/src/jade/header/_nav.jade
+++ b/src/jade/header/_nav.jade
@@ -2,10 +2,14 @@ nav.page-header-nav
   +header-nav-links(
     'page-header-nav__list',
     'page-header-nav__list-item',
-    'page-header-nav-about')
+    'page-header-nav-projects',
+    'page-header-nav-about',
+    'page-header-nav-contact')
 
 nav.page-header-nav-mobile#page-header-nav-mobile
   +header-nav-links(
     'page-header-nav-mobile__list', 
     'page-header-nav-mobile__list-item',
-    'page-header-nav-mobile-about')
+    'page-header-nav-mobile-projects',
+    'page-header-nav-mobile-about',
+    'page-header-nav-mobile-contact')
