--- a/src/scss/modules/contact-modal/contact-modal.scss
+++ b/src/scss/modules/contact-modal/contact-modal.scss
@@ -2,10 +2,12 @@
   @include modal(#fff);
   max-width: 700px;
   height: 515px;
-  
-  // ON SHOW
-  pointer-events: auto;
-  opacity: 1;
+
+  &.show {
+    pointer-events: auto;
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
   
   &__heading {
     text-align: center;
