--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -2,8 +2,8 @@ $nile-blue: #173753;
 $marzipan: #F7DD9C;
 $porsche: #ECBB6B;
 $mine-shaft: #363636;
+$tundora: #4e4e4e;
 $dove-grey: #686868;
 $boulder: #7B7B7B;
 $alto: #DADADA;
 $wild-sand: #F5F5F5;
-
