Hook up 'message me' button to show contact modal

--- a/src/jade/modules/_contact-modal.jade
+++ b/src/jade/modules/_contact-modal.jade
@@ -1,7 +1,7 @@
 .home-modal.contact-modal#contact-modal
 
   header.contact-modal__header
-    h1.contact-modal__title Reach out!
+    h1.contact-modal__title Well, hello!
 
     .home-about-modal__close#contact-modal-close
       include ../../svg/misc-icons/close_icn.svg
