--- a/src/jade/footer/footer.jade
+++ b/src/jade/footer/footer.jade
@@ -1,7 +1,7 @@
 footer.page-footer
   p.page-footer__text Copyright © <span id='copyright-date'></span> Andrew Jensen-Battaglia • Front-End Developer
   .page-footer__icons
-    a(class="page-footer__icon", href="#")
+    a(class="page-footer__icon", target="_blank" href="https://github.com/pixel-glyph")
       include ../../svg/contact-icons/github.svg
-    a(class="page-footer__icon", href="#")
+    a(class="page-footer__icon", target="_blank" href="https://www.linkedin.com/in/ajensenbattaglia")
       include ../../svg/contact-icons/linkedin.svg
