--- a/src/jade/modules/_about-modal.jade
+++ b/src/jade/modules/_about-modal.jade
@@ -9,9 +9,9 @@
     p.home-about-modal-desc__paragraph Other than coding, some hobbies of mine include reading, running, and tabletop games. Though I hail from the small city of Rochester, NY, I have an explorer’s ambition for visiting new places, big and small.
 
     .home-about-modal-icons
-      a(class="home-about-modal-icons__icon", href="#")
+      a(class="home-about-modal-icons__icon", target="_blank" href="https://github.com/pixel-glyph")
         include ../../svg/contact-icons/github.svg
-      a(class="home-about-modal-icons__icon", href="#")
+      a(class="home-about-modal-icons__icon", target="_blank" href="https://www.linkedin.com/in/ajensenbattaglia")
         include ../../svg/contact-icons/linkedin.svg
 
   img(class="home-about-modal__image", src="img/roc_skyline_1x.jpg", srcset="img/roc_skyline_1x.jpg 1x, img/roc_skyline_2x.jpg 2x", title="Rochester, NY" alt="Skyline of Rochester, NY")
