--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -10,25 +10,29 @@ section.home-projects
         "Docs Portal",
         "A documentation portal that allows ease of access to content.",
         "img/Docs_Portal_1x.jpg",
-        "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x")
+        "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x",
+        "docs-portal")
         
       +home-project(
         "#",
         "SASB Navigator",
         "A high-performance navigator to help companies find the right sustainability information.",
         "img/SASB_SN_1x.jpg",
-        "img/SASB_SN_2x.jpg 2x, img/SASB_SN_1x.jpg 1x")
+        "img/SASB_SN_2x.jpg 2x, img/SASB_SN_1x.jpg 1x",
+        "sasb-navigator")
 
       +home-project(
         "#",
         "Better Reads",
         "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
         "img/Better_Reads_1x.png",
-        "img/Better_Reads_2x.png 2x, img/Better_Reads_1x.png 1x")
+        "img/Better_Reads_2x.png 2x, img/Better_Reads_1x.png 1x",
+        "better-reads")
 
       +home-project(
         "#",
         "CommuteCast",
         "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
         "img/Commute_Cast_1x.jpg",
-        "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x")
+        "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x",
+        "commutecast")
