--- a/src/jade/header/header.jade
+++ b/src/jade/header/header.jade
@@ -2,9 +2,8 @@ header.page-header#page-header
   .header-logo
     .header-logo__inner
       a.header-logo__text(href="#") AJ
-  .mobile-nav-toggle#mobile-nav-toggle
-    .mobile-nav-toggle__line
-    .mobile-nav-toggle__line
-    .mobile-nav-toggle__line
+  .mobile-nav-toggle-wrapper#mobile-nav-toggle-wrapper
+    .mobile-nav-toggle-box
+      .mobile-nav-toggle
   
   include _nav.jade
