Link up projects page

--- a/src/jade/helpers/mixins.jade
+++ b/src/jade/helpers/mixins.jade
@@ -1,6 +1,7 @@
 mixin header-nav-links(listClass, listItemClass, listItemId1, listItemId2, listItemId3)
   ul(class=listClass)
-    li(class=listItemClass id=listItemId1) Projects
+    li(class=listItemClass id=listItemId1)
+      a(href="projects") Projects
     li(class=listItemClass id=listItemId2) About
     li(class=listItemClass id=listItemId3) Contact
 
