Updates to icons; various styling fixes; include public dir

--- a/src/jade/footer/footer.jade
+++ b/src/jade/footer/footer.jade
@@ -1,5 +1,5 @@
 footer.page-footer
-  p.page-footer__text Copyright © <span id='copyright-date'></span> Andrew Jensen-Battaglia • Front-End Developer
+  p.page-footer__text Copyright © <span id='copyright-date'></span> Andrew Jensen-Battaglia • Frontend Developer
   .page-footer__icons
     a(class="page-footer__icon", target="_blank" href="https://github.com/pixel-glyph")
       include ../../svg/contact-icons/github.svg
