--- a/src/jade/main/_banner.jade
+++ b/src/jade/main/_banner.jade
@@ -1,10 +1,10 @@
 section.home-banner
   .home-banner-text
-    p.home-banner-text__greet Hi, I'm Andrew
-    p.home-banner-text__desc I love to design, create, and problem solve. For me, front-end development is the wonderful nexus of all these things.
+    p.home-banner-text__greet Greetings, and welcome to my site!
+    p.home-banner-text__desc I love to design, create, and problem solve. For me, frontend development is the wonderful nexus of all these things.
   
 picture
   source(media="(min-width: 1250px)", srcset="img/andrew_headshot_1x.png 1x, img/andrew_headshot_2x.png 2x", title="Hi!", alt="Headshot of Andrew")
   source(media="(min-width: 850px)", srcset="img/andrew_headshot_small_1x.png 1x, img/andrew_headshot_small_2x.png 2x", title="Hi!", alt="Headshot of Andrew")
   source(media="(max-width: 849px)", srcset="img/andrew_headshot_mobile_1x.png 1x, img/andrew_headshot_mobile_2x.png 2x", title="Hi!", alt="Headshot of Andrew")
-  img(class="home-banner__headshot", src="img/andrew_headshot_1x.png", srcset="img/andrew_headshot_1x.png 1x, img/andrew_headshot_2x.png 2x", title="Hi!", alt="Headshot of Andrew")
+  img(id="home-banner-headshot" class="home-banner__headshot", src="img/andrew_headshot_1x.png", srcset="img/andrew_headshot_1x.png 1x, img/andrew_headshot_2x.png 2x", title="Hi!", alt="Headshot of Andrew")
