--- a/src/jade/main/_skills.jade
+++ b/src/jade/main/_skills.jade
@@ -10,15 +10,15 @@ section.home-skills
       img(class="home-skill-icon home-skill-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
       include ../../svg/skill-icons/react.svg
       include ../../svg/skill-icons/es6.svg
-      img(class="home-skill-icon home-skill-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
-      include ../../svg/skill-icons/jquery.svg
+      include ../../svg/skill-icons/webpack.svg
+      include ../../svg/skill-icons/jest.svg
 
   .home-skill-group-mobile
     include ../../svg/skill-icons/css3.svg
     include ../../svg/skill-lines/mobile-css-lines.svg
     .home-skill-group-mobile__icons
       include ../../svg/skill-icons/sass.svg
-      include ../../svg/skill-icons/bem.svg
+      include ../../svg/skill-icons/less.svg
 
   .home-skill-group-mobile
     include ../../svg/skill-icons/html5.svg
@@ -32,10 +32,13 @@ section.home-skills
     img(class="home-skill-icon home-skill-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
     include ../../svg/skill-icons/react.svg
     include ../../svg/skill-icons/es6.svg
-    img(class="home-skill-icon home-skill-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
-    include ../../svg/skill-icons/jquery.svg
+    include ../../svg/skill-icons/webpack.svg
+    include ../../svg/tool-icons/gulp.svg
+    include ../../svg/skill-icons/jest.svg
+    img(class="home-skill-icon home-skill-icon__enzyme" src="img/enzyme_1x.png", srcset="img/enzyme_1x.png 1x, img/enzyme_2x.png 2x", title="Enzyme" alt="Enzyme Icon")
+    img(class="home-skill-icon home-skill-icon__rtl" src="img/RTL_1x.png", srcset="img/RTL_1x.png 1x, img/RTL_2x.png 2x", title="React Testing Library" alt="React Testing Library Icon")
     include ../../svg/skill-icons/css3.svg
     include ../../svg/skill-icons/sass.svg
-    include ../../svg/skill-icons/bem.svg
+    include ../../svg/skill-icons/less.svg
     include ../../svg/skill-icons/html5.svg
     include ../../svg/skill-icons/pug.svg
