--- a/src/jade/main/_contact.jade
+++ b/src/jade/main/_contact.jade
@@ -1,7 +1,7 @@
 section.home-contact
   h2(class="section-heading section-heading--center home-contact__heading") Get in Touch!
   p.home-contact__info I am currently available for hire.
-  p.home-contact__info If you’re on the lookout for a driven, best practices-following, detail-oriented front-end developer, look no further!
+  p.home-contact__info If you’re on the lookout for a driven, best practices-following, detail-oriented frontend developer, look no further!
   button.home-contact__message-btn#home-contact-message-btn
     include ../../svg/contact-icons/mail-icn.svg
     span.home-contact__message-btn-text MESSAGE ME
