--- a/src/scss/modules/home-banner/home-banner.scss
+++ b/src/scss/modules/home-banner/home-banner.scss
@@ -4,15 +4,16 @@
 
   @include tablet-wide {
     &:after {
-      position: absolute;
-      bottom: -2px;
-      width: 100%;
-      height: 10vw;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='#fff' preserveAspectRatio='none'%3E%3Cpolygon points='0, 95 100, 0 100, 100 0,100'/%3E%3C/svg%3E");
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
       content: "";
+      position: absolute;
+      bottom: -7vw;
+      height: 14.90vw;
+      width: 100%;
+      transform: skewY(-8deg);
+      transform-origin: 50% 0;
+      outline: 1px solid transparent;
+      backface-visibility: hidden;
+      background-color: white;
       z-index: 4;
     }
   }
@@ -27,6 +28,10 @@
   position: fixed;
   left: 20%;
   top: em(225);
+
+  &.hide {
+    visibility: hidden;
+  }
   
   @include tablet-wide {
     width: em(360);
@@ -43,10 +48,9 @@
   @include desktop-wide {
     position: fixed;
     top: unset;
-    bottom: -10px;
     width: em(440);
-    bottom: 10vw;
-    margin-bottom: -84px;
+    bottom: 12.8vw;
+    margin-bottom: -82px;
   }
 }
 
