Add Jenkins img; minor tweaks to SVGs

--- a/src/jade/main/_tools.jade
+++ b/src/jade/main/_tools.jade
@@ -6,5 +6,7 @@ section.home-tools
   .home-tools__icons
     img(class="home-tool-icon home-icon__tool home-tool-icon__git" src="img/git_1x.png", srcset="img/git_1x.png 1x, img/git_2x.png 2x,", title="Git", alt="Git Icon")
     img(class="home-tool-icon home-icon__tool home-tool-icon__vs-code" src="img/vs_code_1x.png", srcset="img/vs_code_1x.png 1x, img/vs_code_2x.png 2x,", title="VS Code", alt="Visual Studio Code Icon")
+    img(class="home-tool-icon home-icon__tool home-tool-icon__jenkins" src="img/jenkins_1x.png", srcset="img/jenkins_1x.png 1x, img/jenkins_2x.png 2x,", title="Jenkins", alt="Jenkins Icon")
     include ../../svg/tool-icons/sketch.svg
     include ../../svg/tool-icons/npm.svg
+    include ../../svg/tool-icons/yarn.svg
