Add bash icon; re-style tools section for desktop

--- a/src/jade/main/_contact.jade
+++ b/src/jade/main/_contact.jade
@@ -1,5 +1,5 @@
 section.home-contact
-  h2(class="section-heading section-heading--center home-contact__heading") Get in Touch!
+  h2(class="section-heading section-heading--center home-contact__heading") Get in Touch
   p.home-contact__info I am currently available for hire.
   p.home-contact__info If you’re on the lookout for a driven, best practices-following, detail-oriented frontend developer, look no further!
   button.home-contact__message-btn#home-contact-message-btn
