Basic mobile outline for Projects page

--- a/src/jade/header/header.jade
+++ b/src/jade/header/header.jade
@@ -1,7 +1,7 @@
 header.page-header#page-header
   .header-logo
     .header-logo__inner
-      a.header-logo__text(href="#") AJ
+      a.header-logo__text(href="/") AJ
   .mobile-nav-toggle-wrapper#mobile-nav-toggle-wrapper
     .mobile-nav-toggle-box
       .mobile-nav-toggle
