--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,3 +28,6 @@
 @import 'modules/contact-modal/contact-modal';
 @import 'modules/contact-form/contact-form';
 @import 'modules/overlay/page-overlay';
+
+@import 'modules/projects-heading/projects-heading.scss';
+@import 'modules/projects-heading/projects-content-body.scss';
