--- a/public/projects.jade
+++ b/public/projects.jade
@@ -10,7 +10,7 @@ html(lang="en")
   body
     include ../src/jade/helpers/mixins.jade
     include ../src/jade/header/header.jade
-    h1 Projects, yo!
+    include ../src/jade/projects/projects-main.jade
     include ../src/jade/footer/footer.jade
     include ../src/jade/modules/_overlay.jade
     include ../src/jade/modules/_about-modal.jade
